--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "cypress": "^14.3.2",
     "jest": "^29.7.0",
     "vite": "^4.5.0"
   },
